# desktop

./: .gitignore  .gitlab-ci.yml  README_KDE  apoel.txt  applications.conf  applications.order  applications.sums  boost.order  build.sh  check-files.sh  checksums.txt  clean-builddir.sh  clean-workdir.sh  compile.sh  copy-any.sh  foo.txt  frameworks.conf  frameworks.order  frameworks.sums  get-any.sh  haskell-build-order.txt  install.sh  kde-14.12.order  kde-4.11.2.txt  kde-4.12.0.txt  kde-4.12.1.txt  kde-4.12.2.txt  kde-4.12.3.txt  kde-4.14.order  kde-sc.md5  kde-telepathy.order  kdeapps-15.04.1.order  kdeapps-15.04.2.order  kdeapps-15.04.order  kdeapps.conf  kdeapps.order  kdeapps.order.save  kdeapps.sums  kdeupdate.sh  kdevelop.checksums  (+24 more)
0ad/: 0ad-archdetection.diff  0ad-nogtk.patch  0ad.sh  PKGBUILD
0ad-data/: ChangeLog  PKGBUILD
2mandvd/: 2mandvd.desktop  2mandvd.install  PKGBUILD  ffmpeg-0.11.diff
KDStateMachineEditor/: PKGBUILD
accountsservice/: PKGBUILD
acetoneiso2/: PKGBUILD
ack/: PKGBUILD
acpi/: PKGBUILD
acpi-eeepc-generic/: PKGBUILD  acpi-eeepc-generic.conf
acpid/: PKGBUILD  acpid.service
aften/: PKGBUILD
aircrack-ng/: PKGBUILD
akabei/: PKGBUILD  akabei.install
akabeiclient/: PKGBUILD
akonadi-calendar/: PKGBUILD  akonadi-mime
akonadi-calendar-tools/: PKGBUILD
akonadi-contacts/: PKGBUILD
akonadi-google/: PKGBUILD
akonadi-google-git/: PKGBUILD
akonadi-googledata/: PKGBUILD
akonadi-import-wizard/: PKGBUILD
akonadi-mime/: PKGBUILD
akonadi-notes/: PKGBUILD
akonadi-qt4/: PKGBUILD
libsquish/: CMakeLists.txt  PKGBUILD
(+3121 files in other folders)
